# ForPHENIX

Jets/Analysis/code/GaussianFilter/jetextract/: .cvsignore  Makefile.am  Makefile.in  SConstruct  autogen.sh  config.h.in  configure  configure.in
Jets/Analysis/code/He3Jet/: EmcMap.h  He3Jet.C  He3Jet.h  He3JetLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
Jets/Analysis/code/He3Jet/CVS/: Entries  Repository
Jets/Analysis/code/He3Jet/HotDeadMap/: DeadWarnHe3Au.txt  makeMap.C  warnmap.txt
Jets/Analysis/code/He3Jet/autom4te.cache/: output.0  output.1  traces.0  traces.1
Jets/Analysis/code/JetAnalyzer/: EmcMap.h  EmcMatching.C  JetAnalyzer.C  JetAnalyzer.C.~1.146.~  JetAnalyzer.h  JetAnalyzer.h.~1.87.~  JetAnalyzerLinkDef.h  Makefile.am  Makefile.in  Pc3Matching.C  TrackQualityCuAu.h  TrackQualityPP.h  configure  warnmapCuAu.txt
Jets/Analysis/code/JetAnalyzer/CVS/: Entries  Repository
Jets/Analysis/code/JetAnalyzer/offset/: configure.old
Jets/Analysis/code/JetAnalyzer/oldStuff/: Makefile.am  Makefile.in  Makefile.new  Makefile.old  autogen.sh  configure.in  configure.in~
Jets/Analysis/code/JetAnalyzer/parametersEMC/: Parameters_Final_dPhi_Sigma.txt  Parameters_Initial_dPhi_Sigma.txt
Jets/Analysis/code/JetAnalyzer/parametersPC3/: CuAu200_pc3_par_C3_II.txt  CuAu200_pc3_par_C5_II.txt  CuAu200_pc3_par_C6_I.txt  CuAu200_pc3_par_C8_I.txt  CuAu200_pc3_par_C9_I.txt  CuAu200_pc3_par_C9_II.txt  CuAu200_pc3_slopes_C0_I.txt  CuAu200_pc3_slopes_C0_II.txt  CuAu200_pc3_slopes_C1_I.txt  CuAu200_pc3_slopes_C1_II.txt  CuAu200_pc3_slopes_C2_II.txt  CuAu200_pc3_slopes_C3_II.txt  CuAu200_pc3_slopes_C4_I.txt  CuAu200_pc3_slopes_C6_I.txt  CuAu200_pc3_slopes_C9_I.txt  CuAu200_pc3_slopes_C9_II.txt
Jets/Analysis/code/JetSimulation/EnergyScaleChecks/: EnergyScaleChecks.C  EnergyScaleChecks.C~  EnergyScaleChecks.h  EnergyScaleChecks.h~  EnergyScaleChecksLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
Jets/Analysis/code/JetSimulation/JetAnalyzerSim/: JetAnalyzerSim.C  JetAnalyzerSim.h  JetAnalyzerSimLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
Jets/Analysis/code/JetSimulation/JetConstituentPerformance/: JetConstituentPerformance.C  JetConstituentPerformance.C.~1.1.~  JetConstituentPerformance.h  JetConstituentPerformanceLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
Jets/Analysis/code/JetSimulation/JetContainerAnalyzer/: JetContainerAnalyzer.C  JetContainerAnalyzer.h  JetContainerAnalyzerLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
Jets/Analysis/code/JetSimulation/JetNloCorrection/: JetNloCorrection.C  JetNloCorrection.C~  JetNloCorrection.h  JetNloCorrectionLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
Jets/Analysis/code/JetSimulation/JetPhaseSpace/: JetPhaseSpace.C  JetPhaseSpace.C.~1.1.~  JetPhaseSpace.h  JetPhaseSpaceLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
Jets/Analysis/code/JetSimulation/JetSimAcceptance/: JetSimAcceptance.C  JetSimAcceptance.C.~1.1.~  JetSimAcceptance.h  JetSimAcceptanceLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
Jets/Analysis/code/JetSimulation/JetSimWithoutDetector/: JetSimWithoutDetector.C  JetSimWithoutDetector.C.~1.4.~  JetSimWithoutDetector.h  JetSimWithoutDetector.h.~1.3.~  JetSimWithoutDetectorLinkDef.h  Makefile.am  Makefile.in  TAcceptParticle.C  configure.in
Jets/Analysis/code/JetSimulation/JetTriggerData/: JetTriggerData.C  JetTriggerData.h  JetTriggerDataLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
Jets/Analysis/code/JetSimulation/JetTriggerPythia/: JetTriggerPythia.C  JetTriggerPythia.h  JetTriggerPythia.h.~1.8.~  JetTriggerPythiaLinkDef.h  Makefile.am  Makefile.in  Makefile.old  TAcceptParticle.h  configure  configure.in
Jets/Analysis/code/Pc3EmcMatching/: EmcMatching.C  EmcMatching.h  Makefile.am  Makefile.in  Pc3EmcMatching.C  Pc3EmcMatching.h  Pc3EmcMatchingLinkDef.h  Pc3Matching.C  Pc3Matching.h  configure  configure.in
Jets/Analysis/code/Pc3EmcMatching/CVS/: Entries  (+1 more)
Jets/Analysis/code/Run13Jet/: EmcMap.h  Makefile.am  Makefile.in  Run13Jet.C  Run13Jet.C.~1.6.~  Run13Jet.h  configure  configure.in
Jets/Analysis/code/WarnMapStudy/: EmcMap.C  EmcMap.h  Makefile.am  Makefile.in  WarnMapStudy.C  WarnMapStudy.h  WarnMapStudyLinkDef.h  configure  configure.in
Jets/Analysis/code/pAuJet/: EmcMap.h  Makefile.am  Makefile.in  configure  configure.in  pAuJet.C  pAuJet.C.~1.1.~  pAuJet.h  pAuJetLinkDef.h  warnmap.txt
Jets/Run13Jets/code/JetHadCorrection/: JetHadCorrection.C  JetHadCorrection.h  JetHadCorrection.h~  JetHadCorrectionLinkDef.h  JetHadCorrectionLinkDef.h~  Makefile.am  Makefile.in  configure  configure.in
Jets/Run13Jets/code/Run13JetSim/: Makefile.am  Makefile.in  Run13JetSim.C  Run13JetSim.C~  Run13JetSim.h  Run13JetSimLinkDef.h  configure  configure.in
Jets/Run13Jets/code/Run13JetTriggerPythia/: Makefile.am  Makefile.in  Run13JetTriggerPythia.C  Run13JetTriggerPythiaLinkDef.h  configure  configure.in
Jets/Run13Jets/code/mrpind_Run13Jet/: EmcMatching.C  EmcTofCorr.C  EmcTofCorr.h  Makefile.am  Makefile.in  PC3Matching.C  Run13Jet.C  Run13Jet.C.~1.43.~  Run13Jet.h  Run13Jet.h.~1.22.~  Run13JetLinkDef.h  Run13MuCorr.C  configure  configure.in  jetAntiKTcode.C  warnmap.txt
WarnMaps/code/CuAuEMCal/: EMCalMap.C  EMCalMap.C.~1.4.~  EMCalMap.h  EMCalMap.h.~1.2.~  EMCalMapLinkDef.h  Makefile.am  Makefile.in  configure  configure.in
WarnMaps/code/CuAuEMCal/CVS/: Entries  Repository
WarnMaps/code/CuAuEMCal/autom4te.cache/: output.0  output.1  output.2  output.3  traces.0  traces.1  traces.2  traces.3
WarnMaps/code/CuAuEMCal/macro/: CuAuEMCal.root  run_CuAuEMCal.C  run_CuAuEMCal.C~
WarnMaps/code/CuAuEMCal/work/: #makeMap.C#  getSigma.C  makeMap.C  makeMap.cmd  meanSigma.txt
WarnMaps/code/PP510EMCal/: EMCalMapPP510.C  EMCalMapPP510.C.~1.1.~  EMCalMapPP510.h.~1.1.~  EMCalMapPP510LinkDef.h  Makefile.am  Makefile.in  configure  configure.in
WarnMaps/code/PP510EMCal/CVS/: Entries  Repository
WarnMaps/code/PP510EMCal/autom4te.cache/: output.0  output.1  traces.0  traces.1
(+815 files in other folders)
