# -*- mode: autoconf -*-
AC_INIT
AC_CONFIG_SRCDIR(autogen.sh)

AM_INIT_AUTOMAKE(He3Jet, 1.00)

AC_PROG_CXX(CC g++)
AC_ENABLE_STATIC(no)
AC_PROG_LIBTOOL

CXXFLAGS="$CXXFLAGS -DHAVE_ROOT=1 -DHAVE_PHENIX=1 -DHAVE_LZO2=1 -DHAVE_CGAL=1 -DHAVE_FASTJET=1 -DHAVE_SSE=1 -DHAVE_SSE2=1"

if test -n "$OFFLINE_MAIN"; then

    OFFLINE_CPPFLAGS="-I$OFFLINE_MAIN/include"

    OFFLINE_LDFLAGS="-L$OFFLINE_MAIN/lib"
    CPPFLAGS="$CPPFLAGS $OFFLINE_CPPFLAGS"
    LDFLAGS="$LDFLAGS $OFFLINE_LDFLAGS"
    AC_SUBST(OFFLINE_CPPFLAGS)
    AC_SUBST(OFFLINE_LDFLAGS)

    LIBS="$LIBS -llzo2"
    LIBS="$LIBS -lfastjetplugins -lsiscone -lfastjet -lCGAL -lCGAL_Core"
fi

AC_OUTPUT(Makefile)