# -*- mode: makefile; -*-

lib_LTLIBRARIES = libhalf.la

#####################################################################

libhalf_la_SOURCES = half.cc
libhalf_la_CPPFLAGS = -I@srcdir@

noinst_HEADERS = eLut.h halfFunction.h half.h halfLimits.h toFloat.h 
include_HEADERS =

CLEANFILES = *~ ppmd/*~
